transferred over UI elements to make login and create account pages look similar. Testing out new DB url for POST method in js

--- a/css/index.css
+++ b/css/index.css
@@ -23,8 +23,18 @@ form{
   margin: 25px;
 }
 
+.form{
+  padding-top: 40px;
+}
 
 header {
     background-color: white;
     text-align: left;
+    clear: right;
+}
+
+.form-p{
+  padding-bottom: 0;
+  margin-bottom: 0;
+  font-size: 11pt;
 }
